hphp/hack/test/typecheck/deprecated_method.php
<?hh

class F {
  <<__Deprecated('use bar() instead')>>
  public static function foo() {}
}

function f() {
  F::foo();
}
